--- a/src/collective/outputfilters/socialmediaconsent/locales/de/LC_MESSAGES/collective.outpufilters.socialmediaconsent.po
+++ b/src/collective/outputfilters/socialmediaconsent/locales/de/LC_MESSAGES/collective.outpufilters.socialmediaconsent.po
@@ -9,12 +9,12 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
+"Language-Code: de\n"
+"Language-Name: German\n"
 "Preferred-Encodings: utf-8\n"
 "Domain: collective.outputfilters.socialmediaconsent\n"
 
 #. Default: "..."
 #: collective/outputfilters/socialmediaconsent/snippet.pt:10
 msgid "consent_message_youtube"
-msgstr "I agree that content from YouTube may be displayed to me. I am aware that third-party cookies are used and expressly consent to their use."
+msgstr "Ich bin damit einverstanden, dass mir Inhalte von X angezeigt werden. Ich bin mir darüber im Klaren, das Drittanbietercokkies verwendet werden und stimme der Verwendung ausdrücklich zu."
