--- a/src/collective/outputfilters/socialmediaconsent/locales/collective.outpufilters.socialmediaconsent.pot
+++ b/src/collective/outputfilters/socialmediaconsent/locales/collective.outpufilters.socialmediaconsent.pot
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-25 17:12+0000\n"
+"POT-Creation-Date: 2025-02-06 13:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,4 +15,9 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: collective.outputfilters.socialmediaconsent\n"
+"Domain: collective.outpufilters.socialmediaconsent\n"
+
+#. Default: "..."
+#: collective/outputfilters/socialmediaconsent/snippet.pt:10
+msgid "consent_message_youtube"
+msgstr ""
