--- a/src/collective/outputfilters/socialmediaconsent/locales/de/LC_MESSAGES/collective.outputfilters.socialmediaconsent.po
+++ b/src/collective/outputfilters/socialmediaconsent/locales/de/LC_MESSAGES/collective.outputfilters.socialmediaconsent.po
@@ -47,13 +47,13 @@ msgstr "YouTube"
 #: collective/outputfilters/socialmediaconsent/browser/templates/cookie-settings-view.pt:48
 #: collective/outputfilters/socialmediaconsent/browser/templates/snippet-thirdparty.pt:19
 msgid "cos_settings_thirdparty"
-msgstr "Ich bin damit einverstanden, dass mir Inhalte von Drittanbieter Services angezeigt werden. Ich bin mir darüber im Klaren, das Drittanbietercokkies verwendet werden und stimme der Verwendung ausdrücklich zu."
+msgstr "Ich bin damit einverstanden, dass mir Inhalte von Drittanbieter Services angezeigt werden. Ich bin mir darüber im Klaren, das Drittanbietercookies verwendet werden und stimme der Verwendung ausdrücklich zu."
 
 #. Default: "I agree that content from YouTube may be displayed to me. I am aware that third-party cookies are used and expressly consent to their use."
 #: collective/outputfilters/socialmediaconsent/browser/templates/cookie-settings-view.pt:29
 #: collective/outputfilters/socialmediaconsent/browser/templates/snippet-youtube.pt:19
 msgid "cos_settings_youtube"
-msgstr "Ich bin damit einverstanden, dass mir Inhalte von YouTube angezeigt werden. Ich bin mir darüber im Klaren, das Drittanbietercokkies verwendet werden und stimme der Verwendung ausdrücklich zu."
+msgstr "Ich bin damit einverstanden, dass mir Inhalte von YouTube angezeigt werden. Ich bin mir darüber im Klaren, das Drittanbietercookies verwendet werden und stimme der Verwendung ausdrücklich zu."
 
 #. Default: "Your Cookie Settings"
 #: collective/outputfilters/socialmediaconsent/browser/templates/cookie-settings-view.pt:14
